Fix homepage overflow bug

--- a/src/compass/sass/basic.scss
+++ b/src/compass/sass/basic.scss
@@ -300,7 +300,7 @@ body, .submit{font-family:$basic-font;}
 .logo .pic{height:100%;}
 .small-logo{float:left; width:200px;}
 
-.top-nav{min-height:28px; background:#ae5279; z-index:1;}
+.top-nav{position:relative; min-height:28px; background:#ae5279; z-index:9;}
 .top-nav .link{font-size:75%;}
 .top-nav .ico-cart{font-size:16px; position:relative; top:2px; margin-right:2px;}
 .ul-top-nav > li{float:right;}
@@ -317,7 +317,7 @@ body, .submit{font-family:$basic-font;}
   a:hover, a:focus{background:$yellow-dark; color:#fff;}
 }
 
-.head{border-bottom:5px solid $yellow; background:#fff;}
+.head{position:relative; z-index:9; border-bottom:5px solid $yellow; background:#fff;}
 .main-nav{float:right; margin-bottom:-1px; border-left:1px solid $yellow;}
 .main-nav li{float:left; border-right:1px solid $yellow; position:relative;}
 .main-nav li:last-child{margin:0;}
